--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@pixi/app": "^5.1.4",
+    "@pixi/loaders": "^5.1.4",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "gsap": "^2.1.3",
@@ -18,7 +20,9 @@
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0"
+    "@quasar/app": "^1.0.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0"
   },
   "engines": {
     "node": ">= 8.9.0",
