--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pixi/loaders": "^5.1.4",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "firebase": "^7.1.0",
     "gsap": "^2.1.3",
     "pixi.js": "^5.1.3",
     "quasar": "^1.0.0",
