--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gsap": "^2.1.3",
     "pixi.js": "^5.1.3",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vue-mqtt": "^2.0.3"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
